...
        android:icon="@drawable/ic_share"
        android:onClick="shareSelectedNotes"
        android:title="@string/share_icon"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_archive_white_24dp"
        android:onClick="exportSelectedNotes"
        android:title="@string/export_icon"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_close_black_24dp"
        android:onClick="closeExport"
        android:title="@android:string/cancel"
        android:visible="false"
        app:showAsAction="always" />

...
