<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_system_update_alt_black_24dp"


        android:title="@string/export_icon"
        app:showAsAction="always" />




    <!-- Settings, should always be in the overflow -->


</menu>